VCF headers keep their declared version, and INFO/FORMAT lines keep every attribute (#1816)
* Keep a VCFHeader's declared version through copies, rebuilds and merges

The version was a side field that most ways of handling a header lost: the
constructors stripped the fileformat line from the metadata without
looking at it, the copy constructor did not copy the field, and
getMetaDataInInputOrder synthesised a 4.2 line (4.3 for a 4.3 header) in
place of the real one. So the common downstream idiom
new VCFHeader(in.getMetaDataInInputOrder(), samples) always produced a
header with no version, and a 4.0 or 4.1 header could not be told from
one declaring nothing. Meanwhile validateVersionTransition forbade moving
a header across 4.3 in either direction, and smartMergeHeaders refused to
merge a 4.3 header with any other version.

The version is now first-class. A fileformat line among the metadata a
header is built from sets it, and so does addMetaDataLine of one; the
copy constructor copies it; the metadata getters lead with the declared
version's line, so rebuilding a header from them keeps it. A header that
declares no version still answers null and is written as 4.2, which
VCFHeaderVersion.DEFAULT_VERSION names. Any version may follow any other,
since the version only says what the header is written as; the writer is
where the contents get checked against it. Merged headers take the
highest input version, each 4.x version's additions being a superset of
the last, and the merged lines lead with that version.

VCFHeaderVersion gains VCF4_5. With the optimistic property set, 4.4 and
4.5 files are read as themselves, best effort, instead of 4.4 being
relabelled 4.3; without it they are rejected as before, until the
remaining 4.4/4.5 features land. VCFHeaderLineTranslator picks its parser
by major version instead of from a per-version map, which had no 4.4
entry and would have failed on any version added to the enum.

* Keep every attribute of INFO and FORMAT header lines, 