@@ -25,8 +25,8 @@
 
 package htsjdk.variant.vcf;
 
-import java.util.Arrays;
 import java.util.Collections;
+import java.util.List;
 
 /**
  * @author ebanks
@@ -62,7 +62,7 @@ public class VCFFilterHeaderLine extends VCFSimpleHeaderLine {
      * @param version   the vcf header version
      */
     public VCFFilterHeaderLine(final String line, final VCFHeaderVersion version) {
-        super(line, version, "FILTER", Arrays.asList("ID", "Description"), Collections.emptyList());
+        super(line, version, "FILTER", List.of("ID", "Description"), Collections.emptyList());
     }
 
     @Override
